# Sandpile

./: .gitignore
Code/: .gitignore  analysis.ipynb  analysis.py  analysis_2d.ipynb  analysis_nd.ipynb  analysis_nd.py  animation.ipynb  animation.py  data_2_20_c_n  data_2_20_o_n  main.ipynb  power_spectrum.ipynb  power_spectrum.json  power_spectrum.py  pytest.ini  sandpile.py  sandpile1d.py  sandpile_nd_test.ipynb  sandpile_old.py  sandpile_unittest.py  saving_test.ipynb  scaling_exponents.ipynb  scaling_exponents.json  simulation.ipynb  utils.py
Code/avalanche/: Makefile  __init__.py  main.py  numba_main.py  utils.py
Code/computation/: .gitignore  CMakeLists.txt  Makefile  __init__.py  avalanche.py  py_sandpile.cpp  sandpile.cpp  sandpile.pyi  simulation.py  utils.py
Code/computation/include/: avalanche.hpp  sandpile.hpp
Code/computation/tests/: CMakeLists.txt  critical_points.cpp  ravel.cpp  sandpile.cpp  system_relax.cpp  test_avalanche.py
Code/computation_old/tests/: test_avalanche.py
Code/cpp_computation/: .gitignore  CMakeLists.txt  __init__.py  avalanche.cpp  avalanche.pyi  py_sandpile.cpp  sandpile.cpp  sandpile.pyi  sandpile_backup.cpp  simulation.py  unit_test.py
Code/cpp_computation/include/: avalanche.hpp  sandpile.hpp
Code/cpp_computation/tests/: CMakeLists.txt  critical_points.cpp  ravel.cpp  sandpile.cpp  system_relax.cpp  test_avalanche.cpp  test_avalanche.py
Code/data/: power_spectrum.csv  scaling_exponents.csv  scaling_exponents_comparison.csv
Code/data/1D/d1_g40_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/1D/d1_g40_c7_op_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g100_c7_cl_nco/: mean_power_spectrum.npy
Code/data/2D/d2_g10_c7_cl_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g10_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g10_c7_op_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g10_c7_op_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g20_c7_cl_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g20_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g20_c7_op_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g20_c7_op_nco/: mean_power_spectrum.npy
Code/data/2D/d2_g40_c7_cl_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g40_c7_cl_nco/: mean_power_spectrum.npy
Code/data/2D/d2_g40_c7_op_co/: mean_power_spectrum.npy
Code/data/2D/d2_g40_c7_op_nco/: mean_power_spectrum.npy
Code/data/2D/d2_g5_c7_cl_co/: mean_power_spectrum.npy
Code/data/2D/d2_g5_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g5_c7_op_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/2D/d2_g5_c7_op_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/3D/d3_g10_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/3D/d3_g10_c7_op_co/: avalanche_data_0.npz  avalanche_data_1.npz  avalanche_data_10.npz  avalanche_data_11.npz  avalanche_data_12.npz  avalanche_data_13.npz  avalanche_data_14.npz  avalanche_data_15.npz  avalanche_data_16.npz  avalanche_data_17.npz  avalanche_data_18.npz  avalanche_data_19.npz  avalanche_data_2.npz  avalanche_data_3.npz  avalanche_data_4.npz  avalanche_data_5.npz  avalanche_data_6.npz  avalanche_data_7.npz  avalanche_data_8.npz  avalanche_data_9.npz  avalanche_distribution.npz  mean_power_spectrum.npy  power_spectrum_0.npy  power_spectrum_1.npy  power_spectrum_10.npy  power_spectrum_11.npy  power_spectrum_12.npy  power_spectrum_13.npy  power_spectrum_14.npy  power_spectrum_15.npy  power_spectrum_16.npy  power_spectrum_17.npy  power_spectrum_18.npy  power_spectrum_19.npy  power_spectrum_2.npy  power_spectrum_3.npy  power_spectrum_4.npy  power_spectrum_5.npy  power_spectrum_6.npy  power_spectrum_7.npy  (+2 more)
Code/data/3D/d3_g10_c7_op_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/3D/d3_g20_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/3D/d3_g20_c7_op_co/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/3D/d3_g20_c7_op_nco/: mean_power_spectrum.npy
Code/data/4D/d4_g15_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/4D/d4_g15_c7_op_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/4D/d4_g25_c7_cl_nco/: mean_power_spectrum.npy
Code/data/4D/d4_g25_c7_op_nco/: mean_power_spectrum.npy
Code/data/5D/d5_g10_c7_cl_nco/: avalanche_distribution.npz
Code/data/5D/d5_g10_c7_op_nco/: mean_power_spectrum.npy
Code/data/5D/d5_g15_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/6D/d6_g10_c7_cl_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/6D/d6_g10_c7_cl_nco_old/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/data/6D/d6_g10_c7_op_nco/: avalanche_distribution.npz  mean_power_spectrum.npy
Code/tables/: scaling_exponents_cl_nco.tex  scaling_exponents_comparison_cl_nco.tex
Latex/: templateForReport.tex
